spelling and spacing fixed

--- a/css/main.css
+++ b/css/main.css
@@ -54,5 +54,6 @@ h2 {
 }
 
 figcaption {
+  margin-bottom: 2rem;
   font-size: 0.9em;
 }
